# bookmark_cleaner

./: .env.example  .gitignore  .prettierrc  CHANGELOG.md  README.md  bookmark_cleaner.py  package.json  pyproject.toml  requirements.txt  run.ps1  run.sh
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  test.yml
tests/: test_consolidation.py
